--- a/test/e2e/source/views/sections/global/featured-product.liquid
+++ b/test/e2e/source/views/sections/global/featured-product.liquid
@@ -448,13 +448,13 @@ if (!customElements.get('product-modal')) {
 
 
 [36mLine: 1[0m
-[31m[36 mLine : 2 [[0m
+[31m[36 mLine : 1 [[0m
 [31m        0 m [[0m
-[31m            31 m(empty line)[[0m
-[31m                0 m [[0m
-[31m                    31 m(empty line)[[0m
+[31m            31 m[[0m
+[31m                36 mLine : 2 [[0m
+[31m                    [[0m
 [31m                        0 m [[0m
-[31m                            31 m[[0m
+[31m                            31 m 0 m [[0m
 
 </script>
 
