--- a/test/e2e/source/views/templates/gift_card.liquid
+++ b/test/e2e/source/views/templates/gift_card.liquid
@@ -31,9 +31,11 @@
       assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
       assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
       assign body_font_bold_italic = body_font_bold | font_modify: 'style', 'italic'
-    %}
+    %}{% style %}
 
-    {% style %}
+
+
+
 
 
 
@@ -203,6 +205,10 @@
 
 
 
+
+
+
+
 {% endstyle %}
 
     {%- unless settings.type_body_font.system? -%}
@@ -322,6 +328,9 @@
   </head>
 </html>
   </head>
-</html> 
+</html>
+  </head>
+</html>
+  </head>
   </head>
 </html>
