--- a/test/e2e/source/views/sections/global/collection-list.liquid
+++ b/test/e2e/source/views/sections/global/collection-list.liquid
@@ -78,6 +78,7 @@
 {% schema %}
 
 {
+  "$schema": "http://json-schema.org/draft-07/schema",
   "name": "t:sections.collection-list.name",
   "tag": "section",
   "class": "section section-collection-list",
