--- a/test/e2e/source/views/snippets/article-card.liquid
+++ b/test/e2e/source/views/snippets/article-card.liquid
@@ -9,7 +9,7 @@
     - show_date: {String} The setting either show the article date or not. If it's not included it will not show the image by default
     - show_author: {String} The setting either show the article author or not. If it's not included it will not show the author by default
 
-    Usage
+    Usags s
     {% render 'article-card' blog: blog, article: article, show_image: section.settings.show_image %}
 {% endcomment %}
 
