--- a/test/e2e/src/views/theme.liquid
+++ b/test/e2e/src/views/theme.liquid
@@ -2,7 +2,7 @@
 <html class="no-js" lang="{{ request.locale.iso_code }}">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
     <link rel="canonical" href="{{ canonical_url }}">
@@ -19,12 +19,15 @@
     <title>
       {{ page_title }}
       {%- if current_tags %}
-        &ndash; tagged "{{ current_tags | join: ', ' }}"{% endif -%}
+        &ndash; tagged "{{ current_tags | join: ', ' }}
+        "{% endif -%}
       {%- if current_page != 1 %}
-        &ndash; Page {{ current_page }}
+        &ndash; Page
+        {{ current_page }}
       {% endif -%}
       {%- unless page_title contains shop.name %}
-        &ndash; {{ shop.name }}
+        &ndash;
+        {{ shop.name }}
       {% endunless -%}
     </title>
 
@@ -38,10 +41,10 @@
     {{ content_for_header }}
 
     {%- liquid
-      assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
-      assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
-      assign body_font_bold_italic = body_font_bold | font_modify: 'style', 'italic'
-    %}
+ assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
+ assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
+ assign body_font_bold_italic = body_font_bold | font_modify: 'style', 'italic'
+ %}
 
     {{ 'base.css' | asset_url | stylesheet_tag }}
 
@@ -57,21 +60,15 @@
     {%- endif -%}
 
     <script>
-      document.documentElement.className = document
-        .documentElement
-        .className
-        .replace("no-js", "js");
+      document.documentElement.className = document.documentElement.className.replace("no-js", "js");
       if (Shopify.designMode) {
-        document
-          .documentElement
-          .classList
-          .add("shopify-design-mode");
+        document.documentElement.classList.add("shopify-design-mode");
       }
     </script>
   </head>
 
   <body class="gradient">
-    <a class="skip-to-content-link button visually-hidden" href="#MainContent">
+    <a class="skip-to-content-link button visually-hidden" href="#maincontent">
       {{ "accessibility.skip_to_text" | t }}
     </a>
 
@@ -81,19 +78,19 @@
 
     {% section 'announcement-bar' %}
     {% section 'header' %}
-    <main
-      id="MainContent"
-      class="content-for-layout focus-none"
-      role="main"
-      tabindex="-1">
+    <main id="maincontent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
 
     {% section 'footer' %}
 
     <ul hidden>
-      <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
-      <li id="a11y-new-window-message">{{ 'accessibility.link_messages.new_window' | t }}</li>
+      <li id="a11y-refresh-page-message">
+        {{ 'accessibility.refresh_page' | t }}
+      </li>
+      <li id="a11y-new-window-message">
+        {{ 'accessibility.link_messages.new_window' | t }}
+      </li>
     </ul>
 
     <script>
