POC Live Reloading Support

--- a/test/e2e/src/styles/scss/bootstrap.scss
+++ b/test/e2e/src/styles/scss/bootstrap.scss
@@ -1,1 +1,8 @@
-@import "bootstrap/scss/bootstrap"
+@import "bootstrap/scss/bootstrap";
+
+
+
+.gradient{
+  padding: 50px;
+  background: pink !important;
+}
