--- a/test/e2e/src/views/templates/gift_card.liquid
+++ b/test/e2e/src/views/templates/gift_card.liquid
@@ -5,7 +5,7 @@
   <head>
     <script src="{{ 'vendor/qrcode.js' | shopify_asset_url }}" defer></script>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="{{ settings.color_background }}">
     <link rel="canonical" href="{{ canonical_url }}">
@@ -21,67 +21,136 @@
 
     {%- assign formatted_initial_value = gift_card.initial_value | money_without_trailing_zeros | strip_html -%}
 
-    <title>{{ 'gift_cards.issued.title' | t: value: formatted_initial_value, shop: shop.name }}</title>
+    <title>
+      {{ 'gift_cards.issued.title' | t: value: formatted_initial_value, shop: shop.name }}
+    </title>
 
     <meta name="description" content="{{ 'gift_cards.issued.subtext' | t }}">
 
     {{ content_for_header }}
 
     {%- liquid
-      assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
-      assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
-      assign body_font_bold_italic = body_font_bold | font_modify: 'style', 'italic'
-    %}
+ assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
+ assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
+ assign body_font_bold_italic = body_font_bold | font_modify: 'style', 'italic'
+ %}
 
     {% style %}
       {{ settings.type_body_font | font_face: font_display: 'swap' }}
       {{ body_font_bold | font_face: font_display: 'swap' }}
       {{ body_font_italic | font_face: font_display: 'swap' }}
       {{ body_font_bold_italic | font_face: font_display: 'swap' }}
-      {{ settings.type_header_font | font_face: font_display: 'swap' }}
+      {{ settings.type_header_font | font_face: font_display: 'swap' }}:root {
+        --font-body-family: 
+        {{ settings.type_body_font.family }},
+        {{ settings.type_body_font.fallback_families }}
+        ;
+        --font-body-style: 
+          {{- - - - settings.type_body_font.style }};
+        --font-body-weight: 
+          {{- - - - settings.type_body_font.weight }};
 
-      :root {
-        --font-body-family: {{ settings.type_body_font.family }}, {{ settings.type_body_font.fallback_families }};
-        --font-body-style: {{ settings.type_body_font.style }};
-        --font-body-weight: {{ settings.type_body_font.weight }};
+        --font-heading-family: 
+        {{ settings.type_header_font.family }},
+        {{ settings.type_header_font.fallback_families }}
+        ;
+        --font-heading-style: 
+          {{- - - - settings.type_header_font.style }};
+        --font-heading-weight: 
+          {{- - - - settings.type_header_font.weight }};
 
-        --font-heading-family: {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
-        --font-heading-style: {{ settings.type_header_font.style }};
-        --font-heading-weight: {{ settings.type_header_font.weight }};
+        --font-body-scale: 
+          {{- - - - settings.body_scale | divided_by: 100.0 }};
+        --font-heading-scale: 
+          {{- - - - settings.heading_scale | times: 1.0 | divided_by: settings.body_scale }};
 
-        --font-body-scale: {{ settings.body_scale | divided_by: 100.0 }};
-        --font-heading-scale: {{ settings.heading_scale | times: 1.0 | divided_by: settings.body_scale }};
+        --color-base-text: 
+        {{ settings.colors_text.red }},
+        {{ settings.colors_text.green }}
+        , {{ settings.colors_text.blue }}
+        ;
+        --color-shadow: 
+        {{ settings.colors_text.red }},
+        {{ settings.colors_text.green }}
+        , {{ settings.colors_text.blue }}
+        ;
+        --color-base-background-1: 
+        {{ settings.colors_background_1.red }},
+        {{ settings.colors_background_1.green }}
+        , {{ settings.colors_background_1.blue }}
+        ;
+        --color-base-background-2: 
+        {{ settings.colors_background_2.red }},
+        {{ settings.colors_background_2.green }}
+        , {{ settings.colors_background_2.blue }}
+        ;
+        --color-base-solid-button-labels: 
+        {{ settings.colors_solid_button_labels.red }},
+        {{ settings.colors_solid_button_labels.green }}
+        , {{ settings.colors_solid_button_labels.blue }}
+        ;
+        --color-base-outline-button-labels: 
+        {{ settings.colors_outline_button_labels.red }},
+        {{ settings.colors_outline_button_labels.green }}
+        , {{ settings.colors_outline_button_labels.blue }}
+        ;
+        --color-base-accent-1: 
+        {{ settings.colors_accent_1.red }},
+        {{ settings.colors_accent_1.green }}
+        , {{ settings.colors_accent_1.blue }}
+        ;
+        --color-base-accent-2: 
+        {{ settings.colors_accent_2.red }},
+        {{ settings.colors_accent_2.green }}
+        , {{ settings.colors_accent_2.blue }}
+        ;
 
-        --color-base-text: {{ settings.colors_text.red }}, {{ settings.colors_text.green }}, {{ settings.colors_text.blue }};
-        --color-shadow: {{ settings.colors_text.red }}, {{ settings.colors_text.green }}, {{ settings.colors_text.blue }};
-        --color-base-background-1: {{ settings.colors_background_1.red }}, {{ settings.colors_background_1.green }}, {{ settings.colors_background_1.blue }};
-        --color-base-background-2: {{ settings.colors_background_2.red }}, {{ settings.colors_background_2.green }}, {{ settings.colors_background_2.blue }};
-        --color-base-solid-button-labels: {{ settings.colors_solid_button_labels.red }}, {{ settings.colors_solid_button_labels.green }}, {{ settings.colors_solid_button_labels.blue }};
-        --color-base-outline-button-labels: {{ settings.colors_outline_button_labels.red }}, {{ settings.colors_outline_button_labels.green }}, {{ settings.colors_outline_button_labels.blue }};
-        --color-base-accent-1: {{ settings.colors_accent_1.red }}, {{ settings.colors_accent_1.green }}, {{ settings.colors_accent_1.blue }};
-        --color-base-accent-2: {{ settings.colors_accent_2.red }}, {{ settings.colors_accent_2.green }}, {{ settings.colors_accent_2.blue }};
+        --gradient-base-background-1: {% if settings.gradient_background_1 != blank %}
+          {{ settings.gradient_background_1 }}
+        {% else %}
+          {{ settings.colors_background_1 }}
+        {% endif %};
 
-        --gradient-base-background-1: {% if settings.gradient_background_1 != blank %}{{ settings.gradient_background_1 }}{% else %}{{ settings.colors_background_1 }}{% endif %};
+        --page-width: 
+          {{- - - - settings.page_width | divided_by: 10 }}rem;
+        --page-width-margin: {% if settings.page_width == '1600' %}
+          2{% else %}
+          0{% endif %}rem;
 
-        --page-width: {{ settings.page_width | divided_by: 10 }}rem;
-        --page-width-margin: {% if settings.page_width == '1600' %}2{% else %}0{% endif %}rem;
+        --buttons-radius: 
+          {{- - - - settings.buttons_radius }}px;
+        --buttons-border-width: {% if settings.buttons_border_opacity > 0 %}
+          {{ settings.buttons_border_thickness }}
+        {% else %}
+          0{% endif %}px;
+        --buttons-border-opacity: 
+          {{- - - - settings.buttons_border_opacity | divided_by: 100.0 }};
+        --buttons-shadow-opacity: 
+          {{- - - - settings.buttons_shadow_opacity | divided_by: 100.0 }};
+        --buttons-shadow-horizontal-offset: 
+          {{- - - - settings.buttons_shadow_horizontal_offset }}px;
+        --buttons-shadow-vertical-offset: 
+          {{- - - - settings.buttons_shadow_vertical_offset }}px;
+        --buttons-shadow-blur-radius: 
+          {{- - - - settings.buttons_shadow_blur }}px;
+        --buttons-border-offset: {% if settings.buttons_radius > 0 or settings.buttons_shadow_opacity > 0 %}
+          0.3{% else %}
+          0{% endif %}px;
 
-        --buttons-radius: {{ settings.buttons_radius }}px;
-        --buttons-border-width: {% if settings.buttons_border_opacity > 0 %}{{ settings.buttons_border_thickness }}{% else %}0{% endif %}px;
-        --buttons-border-opacity: {{ settings.buttons_border_opacity | divided_by: 100.0 }};
-        --buttons-shadow-opacity: {{ settings.buttons_shadow_opacity | divided_by: 100.0 }};
-        --buttons-shadow-horizontal-offset: {{ settings.buttons_shadow_horizontal_offset }}px;
-        --buttons-shadow-vertical-offset: {{ settings.buttons_shadow_vertical_offset }}px;
-        --buttons-shadow-blur-radius: {{ settings.buttons_shadow_blur }}px;
-        --buttons-border-offset: {% if settings.buttons_radius > 0 or settings.buttons_shadow_opacity > 0 %}0.3{% else %}0{% endif %}px;
-
-        --inputs-radius: {{ settings.inputs_radius }}px;
-        --inputs-border-width: {{ settings.inputs_border_thickness }}px;
-        --inputs-border-opacity: {{ settings.inputs_border_opacity | divided_by: 100.0 }};
-        --inputs-shadow-opacity: {{ settings.inputs_shadow_opacity | divided_by: 100.0 }};
-        --inputs-shadow-horizontal-offset: {{ settings.inputs_shadow_horizontal_offset }}px;
-        --inputs-shadow-vertical-offset: {{ settings.inputs_shadow_vertical_offset }}px;
-        --inputs-shadow-blur-radius: {{ settings.inputs_shadow_blur }}px;
+        --inputs-radius: 
+          {{- - - - settings.inputs_radius }}px;
+        --inputs-border-width: 
+          {{- - - - settings.inputs_border_thickness }}px;
+        --inputs-border-opacity: 
+          {{- - - - settings.inputs_border_opacity | divided_by: 100.0 }};
+        --inputs-shadow-opacity: 
+          {{- - - - settings.inputs_shadow_opacity | divided_by: 100.0 }};
+        --inputs-shadow-horizontal-offset: 
+          {{- - - - settings.inputs_shadow_horizontal_offset }}px;
+        --inputs-shadow-vertical-offset: 
+          {{- - - - settings.inputs_shadow_vertical_offset }}px;
+        --inputs-shadow-blur-radius: 
+          {{- - - - settings.inputs_shadow_blur }}px;
       }
     {% endstyle %}
 
@@ -97,8 +166,12 @@
 
   <body class="gradient">
     <header class="gift-card__title">
-      <span class="h2">{{ shop.name }}</span>
-      <h1 class="gift-card__heading">{{ 'gift_cards.issued.subtext' | t }}</h1>
+      <span class="h2">
+        {{ shop.name }}
+      </span>
+      <h1 class="gift-card__heading">
+        {{ 'gift_cards.issued.subtext' | t }}
+      </h1>
       <div class="gift-card__price">
         <p>
           {% if settings.currency_code_enabled %}
@@ -108,7 +181,9 @@
           {% endif %}
         </p>
         {%- if gift_card.enabled == false or gift_card.expired -%}
-          <p class="gift-card__label badge badge--{{ settings.sold_out_badge_color_scheme }}">{{ 'gift_cards.issued.expired' | t }}</p>
+          <p class="gift-card__label badge badge--{{ settings.sold_out_badge_color_scheme }}">
+            {{ 'gift_cards.issued.expired' | t }}
+          </p>
         {%- endif -%}
       </div>
 
@@ -118,7 +193,9 @@
         {%- assign gift_card_balance = gift_card.balance | money -%}
       {% endif %}
       {%- if gift_card.balance != gift_card.initial_value -%}
-        <p class="gift-card__label caption-large">{{ 'gift_cards.issued.remaining_html' | t: balance: gift_card_balance }}</p>
+        <p class="gift-card__label caption-large">
+          {{ 'gift_cards.issued.remaining_html' | t: balance: gift_card_balance }}
+        </p>
       {%- endif -%}
     </header>
 
@@ -128,18 +205,15 @@
       </div>
       <div class="gift-card__qr-code" data-identifier="{{ gift_card.qr_identifier }}"></div>
       <div class="gift-card__information">
-        <input
-          type="text"
-          class="gift-card__number"
-          value="{{ gift_card.code | format_code }}"
-          aria-label="{{ 'gift_cards.issued.gift_card_code' | t }}"
-          readonly
-        >
+        <input type="text" class="gift-card__number" value="{{ gift_card.code | format_code }}" aria-label="{{ 'gift_cards.issued.gift_card_code' | t }}" readonly>
         <div class="gift-card__copy-code">
-          <button class="link gift-card__copy-link">{{ 'gift_cards.issued.copy_code' | t }}</button>
+          <button class="link gift-card__copy-link">
+            {{ 'gift_cards.issued.copy_code' | t }}
+          </button>
           <span class="gift-card__copy-success form__message" role="status"></span>
           <template>
-            {%- render 'icon-success' -%}{{ 'gift_cards.issued.copy_code_success' | t }}
+            {%- render 'icon-success' -%}
+            {{ 'gift_cards.issued.copy_code_success' | t }}
           </template>
         </div>
         {%- if gift_card.pass_url -%}
@@ -148,19 +222,10 @@
           </a>
         {%- endif -%}
         <div class="gift-card__buttons no-print">
-          <a
-            href="{{ shop.url }}"
-            class="button"
-            target="_blank"
-            rel="noopener"
-            aria-describedby="a11y-new-window-message"
-          >
+          <a href="{{ shop.url }}" class="button" target="_blank" rel="noopener" aria-describedby="a11y-new-window-message">
             {{ 'gift_cards.issued.shop_link' | t }}
           </a>
-          <button
-            class="button button--secondary"
-            onclick="window.print();"
-          >
+          <button class="button button--secondary" onclick="window.print();">
             {{ 'gift_cards.issued.print_gift_card' | t }}
           </button>
         </div>
@@ -168,19 +233,23 @@
     </main>
 
     <div hidden>
-      <span id="a11y-new-window-message">{{ 'accessibility.link_messages.new_window' | t }}</span>
+      <span id="a11y-new-window-message">
+        {{ 'accessibility.link_messages.new_window' | t }}
+      </span>
     </div>
   </body>
 </html>
 
 <script>
-  var string = { qrImageAlt: {{ 'gift_cards.issued.qr_image_alt' | t | json }} };
-  document.addEventListener('DOMContentLoaded', function() {
-   new QRCode( document.querySelector('.gift-card__qr-code'), {
-    text: document.querySelector('.gift-card__qr-code').dataset.identifier,
-    width: 120,
-    height: 120,
-    imageAltText: string.qrImageAlt
+  var string = {
+    qrImageAlt: {{ 'gift_cards.issued.qr_image_alt' | t | json }}
+  };
+  document.addEventListener("DOMContentLoaded", function() {
+    new QRCode(document.querySelector(".gift-card__qr-code"), {
+      text: document.querySelector(".gift-card__qr-code").dataset.identifier,
+      width: 120,
+      height: 120,
+      imageAltText: string.qrImageAlt
     });
   });
 
@@ -188,12 +257,10 @@
   var clonedTemplate = template.content.cloneNode(true);
 
   var isMessageDisplayed = false
-  document
-  .querySelector('.gift-card__copy-link')
-  .addEventListener('click', () => {
-    navigator.clipboard.writeText(document.querySelector('.gift-card__number').value).then(function () {
-      if (!isMessageDisplayed) {
-        document.querySelector('.gift-card__copy-success').appendChild(clonedTemplate);
+  document.querySelector(".gift-card__copy-link").addEventListener("click", () => {
+    navigator.clipboard.writeText(document.querySelector(".gift-card__number").value).then(function() {
+      if (! isMessageDisplayed) {
+        document.querySelector(".gift-card__copy-success").appendChild(clonedTemplate);
         isMessageDisplayed = true
       }
     });
