--- a/test/e2e/src/views/theme.liquid
+++ b/test/e2e/src/views/theme.liquid
@@ -8,122 +8,75 @@
     <link rel="canonical" href="{{ canonical_url }}">
     <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
 
-    {%- if settings.favicon != blank -%}
-      <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: width: 32, height: 32 }}">
-    {%- endif -%}
+    <link id="s" rel="stylesheet" href="{{ 'bootstrap.css' | asset_url }}">
+    <script id="js" src="{{ 'rollup-bundle.js' | asset_url }}" type="module"></script>
+    <script>
+      const state = new Set();
+      const xhr = {}
 
-    {%- unless settings.type_header_font.system? and settings.type_body_font.system? -%}
-      <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
-    {%- endunless -%}
+      /**
+       * Fetch XHR Request wrapper function
+       */
+      function request(key) {
 
-    <title>
-      {{ page_title }}
-      {%- if current_tags %}
-        &ndash; tagged "{{ current_tags | join: ', ' }}
-        "{% endif -%}
-      {%- if current_page != 1 %}
-        &ndash; Page
-        {{ current_page }}
-      {% endif -%}
-      {%- unless page_title contains shop.name %}
-        &ndash;
-        {{ shop.name }}
-      {% endunless -%}
-    </title>
 
-    {% if page_description %}
-      <meta name="description" content="{{ page_description | escape }}">
-    {% endif %}
+        return new Promise(function(resolve, reject) {
 
-    {% render 'meta-tags' %}
+          const request = xhr[key] = new XMLHttpRequest();
 
-    <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
+          request.open("GET", key);
+          request.setRequestHeader("X-Syncify-Reload", "true");
+          request.setRequestHeader("Clear-Site-Data", "cache");
+          request.setRequestHeader("X-Requested-With", "XMLHttpRequest");
+
+          request.onload = function() {
+            resolve(request.responseText);
+          };
+
+          request.onloadend = function(event) {
+            delete xhr[key];
+          };
+
+          request.onerror = function() {
+            reject(this.statusText);
+          };
+
+          request.onabort = function() {
+            delete xhr[key];
+          };
+
+          request.send();
+
+        });
+
+      };
+
+      (() => {
+        const socketUrl = "ws://localhost:8090/ws";
+        let socket = new WebSocket(socketUrl);
+        socket.onmessage = function(msg) {
+          console.log(msg)
+          if (msg.data == "style") {
+            document.querySelector("#s").href = "http://localhost:3000/bootstrap.css"
+          } else {
+            window.top.location.reload(true);
+          }
+        }
+      })();
+    </script>
+
     {{ content_for_header }}
 
-    {%- liquid
- assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
- assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
- assign body_font_bold_italic = body_font_bold | font_modify: 'style', 'italic'
- %}
 
-    {{ 'base.css' | asset_url | stylesheet_tag }}
-
-    {%- unless settings.type_body_font.system? -%}
-      <link rel="preload" as="font" href="{{ settings.type_body_font | font_url }}" type="font/woff2" crossorigin>
-    {%- endunless -%}
-    {%- unless settings.type_header_font.system? -%}
-      <link rel="preload" as="font" href="{{ settings.type_header_font | font_url }}" type="font/woff2" crossorigin>
-    {%- endunless -%}
-
-    {%- if settings.predictive_search_enabled -%}
-      <link rel="stylesheet" href="{{ 'component-predictive-search.css' | asset_url }}" media="print" onload="this.media='all'">
-    {%- endif -%}
-
-    <script>
-      document.documentElement.className = document.documentElement.className.replace("no-js", "js");
-      if (Shopify.designMode) {
-        document.documentElement.classList.add("shopify-design-mode");
-      }
-    </script>
   </head>
 
   <body class="gradient">
-    <a class="skip-to-content-link button visually-hidden" href="#maincontent">
-      {{ "accessibility.skip_to_text" | t }}
-    </a>
 
-    {%- if settings.cart_type == 'drawer' -%}
-      {%- render 'cart-drawer' -%}
-    {%- endif -%}
 
-    {% section 'announcement-bar' %}
-    {% section 'header' %}
     <main id="maincontent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
 
-    {% section 'footer' %}
 
-    <ul hidden>
-      <li id="a11y-refresh-page-message">
-        {{ 'accessibility.refresh_page' | t }}
-      </li>
-      <li id="a11y-new-window-message">
-        {{ 'accessibility.link_messages.new_window' | t }}
-      </li>
-    </ul>
-
-    <script>
-      window.shopUrl = "{{ request.origin }}";
-      window.routes = {
-        cart_add_url: "{{ routes.cart_add_url }}",
-        cart_change_url: "{{ routes.cart_change_url }}",
-        cart_update_url: "{{ routes.cart_update_url }}",
-        cart_url: "{{ routes.cart_url }}",
-        predictive_search_url: "{{ routes.predictive_search_url }}"
-      };
-
-      window.cartStrings = {
-        error: `{{ 'sections.cart.cart_error' | t }}`,
-        quantityError: `{{ 'sections.cart.cart_quantity_error_html' | t: quantity: '[quantity]' }}`
-      };
-
-      window.variantStrings = {
-        addToCart: `{{ 'products.product.add_to_cart' | t }}`,
-        soldOut: `{{ 'products.product.sold_out' | t }}`,
-        unavailable: `{{ 'products.product.unavailable' | t }}`
-      };
-
-      window.accessibilityStrings = {
-        imageAvailable: `{{ 'products.product.media.image_available' | t: index: '[index]' }}`,
-        shareSuccess: `{{ 'general.share.success_message' | t }}`,
-        pauseSlideshow: `{{ 'sections.slideshow.pause_slideshow' | t }}`,
-        playSlideshow: `{{ 'sections.slideshow.play_slideshow' | t }}`
-      };
-    </script>
-
-    {%- if settings.predictive_search_enabled -%}
-      <script src="{{ 'predictive-search.js' | asset_url }}" defer="defer"></script>
-    {%- endif -%}
   </body>
 </html>
