--- a/test/e2e/custom/src/views/layout/header.liquid
+++ b/test/e2e/custom/src/views/layout/header.liquid
@@ -1,7 +1,10 @@
+<div id="some-vnode"></div>
 <header class="container-fluid">
   <div class="row justify-content-center">
-    <div class="col-4 bg-success py-5">
+    <div class="col-3 bg-success py-5">
+foo bar
 foo
     </div>
+
   </div>
 </header>
