--- a/test/e2e/custom/src/views/layout/header.liquid
+++ b/test/e2e/custom/src/views/layout/header.liquid
@@ -1,9 +1,8 @@
 <div id="some-vnode"></div>
-<header class="container-fluid">
+<header class="container-fluid mb-5 pb-2">
   <div class="row justify-content-center">
-    <div class="col-3 bg-success py-5">
-foo bar
-foo
+    <div class="col-12 bg-success py-5 text-center">
+      <h1>HOT SECTION</h1>
     </div>
 
   </div>
