--- a/test/e2e/custom/src/theme.liquid
+++ b/test/e2e/custom/src/theme.liquid
@@ -38,7 +38,7 @@
     {% render 'meta-tags' %}
 
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
-    {{ content_for_headers }}
+    {{ content_for_header }}
 
     {%- liquid
  assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
