--- a/test/e2e/custom/src/views/include/test.liquid
+++ b/test/e2e/custom/src/views/include/test.liquid
@@ -1,1 +1,5 @@
-<h1>EXAMPLE SNIPPET</h1>
+<div class="row d-none">
+  <div class="col-auto bg-danger">
+    <h1>EXAMPLE SNIPPET</h1>
+  </div>
+</div>
