--- a/test/e2e/brixtol/src/styles/stylesheet.scss
+++ b/test/e2e/brixtol/src/styles/stylesheet.scss
@@ -1,2 +1,2 @@
-@import "bootstrap/scss/bootstrap";
-@import "sections/navigation";
+@import '@brixtol/bootstrap';
+@import 'components/navigation';
