--- a/test/e2e/brixtol/src/styles/vars.css.liquid
+++ b/test/e2e/brixtol/src/styles/vars.css.liquid
@@ -1,2 +1,2 @@
-@import "node_modules/@brixtol/bootstrap";
-@import "sections/navigation";
+@import "@brixtol/bootstrap";
+@import "components/navigation";
