--- a/test/e2e/custom/src/styles/stylesheet.scss
+++ b/test/e2e/custom/src/styles/stylesheet.scss
@@ -1,8 +1,7 @@
-@import "bootstrap/scss/bootstrap";
-@import "sections/navigation";
+@import 'bootstrap/scss/bootstrap';
+@import 'sections/navigation';
 
 body {
   padding: 0 0px;
   background-color: pink;
 }
-
