--- a/test/e2e/custom/src/views/sections/_/test.liquid
+++ b/test/e2e/custom/src/views/sections/_/test.liquid
@@ -1,5 +1,22 @@
-<div class="example">
 
-Hello World
 
-</div>
+<h1 style="background-color:red">
+  Hello World
+</h1>
+
+
+
+{% schema %}
+  {
+    "name": "tester",
+    "class": "example",
+    "tag": "section",
+    "settings": [
+      {
+        "type": "article",
+        "id": "id",
+        "label": "Id"
+      }
+    ]
+  }
+{% endschema %}
