--- a/test/e2e/custom/src/views/theme.liquid
+++ b/test/e2e/custom/src/views/theme.liquid
@@ -277,6 +277,8 @@
     {%- endif -%}
 
     {%  render 'test-1' %}
+    {%  render 'test-2' %}
+    {%  render 'test-3' %}
 
 
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
