--- a/test/e2e/custom/src/views/sections/blocks/video.liquid
+++ b/test/e2e/custom/src/views/sections/blocks/video.liquid
@@ -162,7 +162,7 @@
   },
   "settings": [
     {
-      "type": "inline_richtext",
+      "type": "inline",
       "id": "heading",
       "default": "Video",
       "label": "t:sections.video.settings.heading.label"
