--- a/straps/dusk-advanced/source/views/theme.liquid
+++ b/straps/dusk-advanced/source/views/theme.liquid
@@ -2,18 +2,27 @@
 <html lang="{{ request.locale.iso_code }}">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge">
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1">
 
     <title>
       {{ page_title }}
     </title>
+
+    <script src="{{ 'bundle.min.js' | asset_url }}"></script>
 
     {{ content_for_header }}
 
   </head>
 
   <body>
+    <h1>
+      hellosdddd
+    </h1>
     {{ content_for_layout }}
   </body>
 
