--- a/examples/using-sass/source/views/snippets/navbar.liquid
+++ b/examples/using-sass/source/views/snippets/navbar.liquid
@@ -1,5 +1,10 @@
-<nav>
-  <ul>
-    <li></li>
-  </ul>
-</nav>
+<div class="row justify-content-center py-4 bg-gray">
+  <div class="col-auto">
+    <a
+      href="{{ section.settings.url }}"
+      target="_blank"
+      class="logo">
+      {% render 'icon.logo' %}
+    </a>
+  </div>
+</div>
