--- a/examples/using-sass/source/assets/styles/stylesheet.scss
+++ b/examples/using-sass/source/assets/styles/stylesheet.scss
@@ -1,29 +1,10 @@
-body {
-  background-color: #f8f8f8;
-  font-family: monospace;
-}
-
-.contain {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 100%;
-  height: 95vh;
-}
-
 .logo {
-  width: 120px;
+  display: flex;
+  width: 80px;
   color: #dfdede;
   margin-bottom: 10px;
 }
 
-.text {
-  font-size: 22px;
-  width: 400px;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  margin: 0;
-  color: #d2d2d2;
+.bg-gray {
+  background-color: #f8f8f8;
 }
