--- a/docs/src/views/include/options.liquid
+++ b/docs/src/views/include/options.liquid
@@ -5,7 +5,7 @@
         {{- item.name -}}
       </summary>
       <section class="py-3 pb-5">
-        {{- item.description | markdown -}}
+        {{- item.description | md -}}
       </section>
     </details>
   {%- endfor -%}
