--- a/docs/src/views/layout/base.liquid
+++ b/docs/src/views/layout/base.liquid
@@ -138,7 +138,7 @@
 
     {%- endif -%}
     {%- sprite -%}
-    {%- search -%}
+    {%- search 'syncify' -%}
 
     <div
       class="drawer-backdrop"
