--- a/docs/src/views/include/navbar.liquid
+++ b/docs/src/views/include/navbar.liquid
@@ -29,10 +29,10 @@
               class="active">Docs</a>
           </li>
           <li>
-            <a href="/documentation">CLI</a>
+            <a href="#">CLI</a>
           </li>
           <li class="pr-4">
-            <a href="/documentation">CONFIG</a>
+            <a href="#">OPTIONS</a>
           </li>
 
         </ul>
