--- a/examples/using-paths/src/styles/base.css
+++ b/examples/using-paths/src/styles/base.css
@@ -1,29 +1,26 @@
 body {
-  background-color: #f8f8f8;
+  background-color: #dcd8d8;
   font-family: monospace;
+  height: 100%;
 }
 
 .contain {
+  width: 100%;
+  height: 100%;
   display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 100%;
-  height: 95vh;
 }
 
 .logo {
-  width: 120px;
-  color: #dfdede;
+  width: 300px;
+  height: auto;
+  color: #2d302d;
   margin-bottom: 10px;
 }
 
-.text {
-  font-size: 22px;
-  width: 400px;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  margin: 0;
-  color: #d2d2d2;
-}
